styles.css
:root {
    --bgColor:#0F172A;
  --cardColor:#1E293B;
  --text: #ECFDF5;
  --accent: #1c2f4d;
  --link: #0098e4;
}

body {
  background-color: var(--bgColor);
  color:var(--text);
}

.first_line {
  gap:30px;
  width: 100%;
  display: flex;
  justify-content:center;
  flex-direction: row;
  align-items: center;
}

.first_line img {
  display:flex;
  align-items:center;
  height: 150px;      
  width: 150px;      
  object-fit: cover;  
  border-radius: 50%; 
  flex-shrink: 0;
}

.project_section {
  display: flex;
  max-width: 80%;
  flex-flow:wrap;
  max-width: 80%;
  margin: 0 auto;
  padding: 20px;
  gap: 20px;
}

.Presentation {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  font-size: large;
  line-height: 0.05;
}

.project_list_intro {
  text-decoration: underline;
  flex: 1 1 90%;
  font-weight:bold;
  margin-bottom: 20px;
  text-align: center;
  font-size: large;
}

.card a{
  color: var(--link);
}

.card a:hover{
  color: #d8d8d8;
  text-decoration: underline;
}

.card p{
  color: #c7c6c6;
}
.card {
  flex: 1 1 250px;
  max-width: 350px;
  display: flex;
  background-color: var(--accent);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  display: flex;
  flex-direction: column;
}

.card p:last-child {
  margin-top: auto; /* Pousse ce paragraphe (compétences) tout en bas */
}

.badge {
  background-color: rgba(255, 255, 255, 0.1); /* Un fond léger et discret */
  border: 1px solid var(--accent);            /* Un rappel de ta couleur thème */
  border-radius: 4px;                         /* Angles légèrement arrondis */
  padding: 2px 8px;                           /* Petit espace interne */
  font-size: 0.85em;                          /* Texte un peu plus petit */
  color: var(--accent);
}

.card img {
  width: 100%;
  height: 180px;
  aspect-ratio: 16/9;
  object-fit: cover;
}


.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.container {
  padding: 2px 16px;
}

